<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skiros2_test_lib</name>
  <version>1.0.0</version>
  <description>SkiROS2 library for tests</description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <maintainer email="matthias.mayr@cs.lth.se">Matthias Mayr</maintainer>
  <maintainer email="marcus.klang@cs.lth.se">Marcus Klang</maintainer>
  <license>L-GPL</license>
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author email="matthias.mayr@cs.lth.se">Matthias Mayr</author>
  <author email="marcus.klang@cs.lth.se">Marcus Klang</author>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>skiros2</exec_depend>
  <exec_depend>skiros2_std_skills</exec_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
